<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Messenger</string>

    <string name="alert_dialog_wait_title">Please wait…</string>
    <string name="alert_dialog_connection_failed_title">Connection failed</string>
    <string name="alert_dialog_connection_failed_content">Server is unavailable or no internet connection</string>
    <string name="alert_dialog_registration_successful_title">Registration successful</string>
    <string name="alert_dialog_registration_successful_content">Please check your inbox for a confirmation email. Click the link in the email to confirm your email address</string>
    <string name="alert_dialog_login_error_invalid_login_or_password_title">Login failed</string>
    <string name="alert_dialog_login_error_invalid_login_or_password_content">Invalid login or password</string>
    <string name="alert_dialog_login_error_account_not_confirmed_title">Login failed</string>
    <string name="alert_dialog_login_error_account_not_confirmed_content">Account not confirm. Please check your inbox for a confirmation email. Click the link in the email to confirm your email address</string>
    <string name="alert_dialog_change_password_title">Change password</string>
    <string name="alert_dialog_change_password_content">To change the password, check your email. Click the link in the email to change your password</string>
    <string name="alert_dialog_logged_in_on_new_device_title">Logged in to another device</string>
    <string name="alert_dialog_logged_in_on_new_device_content">Messenger supports simultaneous work with only one device. Clicking on the "OK" button will log out of the account on this device</string>
    <string name="alert_dialog_set_profile_image_upload_photo">Upload a photo</string>
    <string name="alert_dialog_set_profile_image_take_photo">Take a photo</string>
    <string name="alert_dialog_set_profile_image_title">Set profile image</string>
    <string name="alert_dialog_error_file_not_found">An error occurred while opening the file. File not found</string>

    <string name="notification_image_body">Image</string>
    <string name="notification_accept_friend_request_title">Your friend request has been accepted</string>
    <string name="notification_accept_friend_request_body">accepted your friend request</string>
    <string name="notification_new_friend_title">New friend request</string>
    <string name="notification_new_friend_body">wants to add you as a friend</string>
    <string name="notification_button_add_text">Add</string>
    <string name="notification_button_cancel_text">Cancel</string>

    <string name="toast_add_friend_error">An error occurred while adding friends</string>
    <string name="toast_cancel_add_friend_error">An error occurred while canceling the friend request</string>
    <string name="toast_unlock_user">To add a user as a friend - unblock him</string>
    <string name="toast_user_has_blocked_you">Unable to send message. User has blocked you</string>

    <string name="content_description_logo">Messenger logo</string>
    <string name="content_description_user_profile_photo">Profile photo</string>
    <string name="content_description_upload_photo">Photo upload</string>
    <string name="content_description_open_blocked_members_list">Open blocked members list</string>
    <string name="content_description_goto_dialog">Go to dialog</string>

    <string name="menu_drawer_dialogs">Dialogs</string>
    <string name="menu_drawer_friends">Friends</string>
    <string name="menu_drawer_settings">Settings</string>
    <string name="menu_drawer_logout">Log out</string>
    <string name="menu_search_title">Search</string>

    <string name="friend_list_activity_friends_fragment_title">Friends</string>
    <string name="friend_list_activity_incoming_requests_fragment_title">Incoming requests</string>
    <string name="friend_list_activity_outgoing_requests_fragment_title">Outgoing requests</string>

    <string name="login_activity_edit_text_login_hint">Enter your login</string>
    <string name="login_activity_edit_text_password_hint">Enter your password</string>
    <string name="login_activity_button_login_text">Log in</string>
    <string name="login_activity_text_view_register_text">No account yet? Create an account</string>
    <string name="login_activity_text_view_restore_password_text">Forgot your password?</string>
    <string name="login_activity_error_incorrect_login_length">Login can be from 3 to 30 characters long</string>
    <string name="login_activity_error_incorrect_password">Password can be from 6 to 100 characters long including a number and a lowercase letter</string>

    <string name="registration_activity_edit_text_first_name_hint">First name</string>
    <string name="registration_activity_edit_text_surname_hint">Surname</string>
    <string name="registration_activity_edit_text_email_hint">E-mail</string>
    <string name="registration_activity_edit_text_login_hint">Enter a login</string>
    <string name="registration_activity_edit_text_password_hint">Enter a password</string>
    <string name="registration_activity_edit_text_password_confirm_hint">Confirm password</string>
    <string name="registration_activity_button_register_text">Register</string>
    <string name="registration_activity_text_view_login_text">Already have an account? Log in</string>
    <string name="registration_activity_error_passwords_do_not_match">The passwords do not match</string>
    <string name="registration_activity_error_incorrect_login_length">Login can be from 3 to 30 characters long</string>
    <string name="registration_activity_error_incorrect_first_name_length">First name can be from 1 to 50 characters long</string>
    <string name="registration_activity_error_incorrect_surname_length">Surname can be from 1 to 50 characters long</string>
    <string name="registration_activity_error_incorrect_password">Password can be from 6 to 100 characters long including a number and a lowercase letter</string>
    <string name="registration_activity_error_incorrect_email">E-mail is invalid</string>
    <string name="registration_activity_error_email_is_exists">Sorry, this e-mail is already registered</string>
    <string name="registration_activity_error_login_is_exists">Sorry, this login is already registered</string>
    <string name="registration_activity_action_bar_title">Registration</string>

    <string name="restore_password_activity_edit_text_login_hint">Enter a login</string>
    <string name="restore_password_activity_edit_text_password_hint">Enter a new password</string>
    <string name="restore_password_activity_edit_text_password_confirm_hint">Confirm new password</string>
    <string name="restore_password_activity_button_change_password_text">Change password</string>
    <string name="restore_password_activity_error_passwords_do_not_match">The passwords do not match</string>
    <string name="restore_password_activity_error_incorrect_login_length">Login can be from 3 to 30 characters long</string>
    <string name="restore_password_activity_error_incorrect_password">Password can be from 6 to 100 characters long including a number and a lowercase letter</string>
    <string name="restore_password_activity_error_user_not_found">User with this login not found</string>
    <string name="restore_password_activity_action_bar_title">Change password</string>

    <string name="settings_activity_error_camera_not_found">Can\'t connect to camera</string>
    <string name="settings_activity_error_writing_bitmap_to_file">An error occurred while processing the user\'s photo</string>
    <string name="settings_activity_enable_notifications_text">Enable notifications</string>
    <string name="settings_activity_blocked_members_list_text">Blocked members list</string>
    <string name="settings_activity_clear_cache_and_sign_out_text">Clear cache and sign out</string>
    <string name="settings_activity_alert_clear_cache_yes">Yes</string>
    <string name="settings_activity_alert_clear_cache_no">No</string>
    <string name="settings_activity_alert_clear_cache_title">Messenger</string>
    <string name="settings_activity_alert_clear_cache_message">You really want to clear the cache and log out?</string>
    <string name="settings_activity_server_address_text">Server address:</string>
    <string name="settings_activity_action_bar_title">Settings</string>

    <string name="user_info_activity_goto_dialog_text">Go to dialog</string>
    <string name="user_info_activity_block_text">Block this user</string>
    <string name="user_info_activity_block_hint_text">When a user is blocked, he will not be able to communicate with you</string>
    <string name="user_info_friend_status_user_is_not_friend">User is not on your friend list</string>
    <string name="user_info_friend_status_user_is_friend">User is your friend</string>
    <string name="user_info_friend_status_friend_request_has_been_sent">Friend request has been sent</string>
    <string name="user_info_friend_status_friend_incoming_friend_request">User sent friend request</string>
    <string name="user_info_button_friend_add">Add</string>
    <string name="user_info_button_friend_delete">Delete</string>
    <string name="user_info_button_friend_cancel">Cancel</string>
    <string name="user_info_button_friend_accept">Accept</string>
    <string name="user_info_activity_action_bar_title">User information</string>

    <string name="dialog_activity_enter_message_hint">Enter the message</string>
    <string name="dialog_activity_text_view_blocked_information_text">User has blocked you</string>
    <string name="dialog_activity_online_text">Online</string>
    <string name="dialog_activity_last_seen_text">last seen</string>
    <string name="dialog_activity_at_text">at</string>

    <string name="dialogs_list_activity_action_bar_title">Dialogs</string>
    <string name="dialogs_list_text_view_empty_dialogs_list_text">There are no dialogues</string>

    <string name="users_search_activity_action_bar_title">Friend search</string>

    <string name="blocked_users_activity_action_bar_title">Blocked users list</string>
</resources>
